--- a/RDEvent/Views/Events/AddEvents.cshtml
+++ b/RDEvent/Views/Events/AddEvents.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model RDEvent.Models.Addevent
+@{
     ViewBag.Title = "Addevent";
 }
 
@@ -8,149 +9,151 @@
         <h1 Style="background-color: black;color:pink;"> Add Events </h1>
         <br />
     </center>
-    @Html.AntiForgeryToken()
+    @using (Html.BeginForm("Index", "Events", FormMethod.Post, new { @class = "container" }))
+    {
+        @Html.AntiForgeryToken()
 
-    <p> @Html.Label("Event Name", "Event Name:")</p>
-    @Html.TextBox("Event Name", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("Event Name", "", new { @class = "text-danger" })
-    <br />
-
-
-    <p> @Html.Label("Region", "Region:")</p>
-    @Html.DropDownList("Region", new List<SelectListItem>
-   {
-new SelectListItem {Text ="BOP",Value="1"},
-new SelectListItem {Text ="Central 1",Value="2"},
-new SelectListItem {Text ="Central 2",Value="3"},
-new SelectListItem {Text ="Northern",Value="4"},
-new SelectListItem {Text ="Southern 1",Value="5"},
-new SelectListItem {Text ="Southern 2",Value="6"},
-new SelectListItem {Text ="Wellington",Value="7"},
-
-   }, "Select the Region")
+        <p> @Html.Label("Event Name", "Event Name:")</p>
+        @Html.TextBoxFor(s => s.EventName, null, new { @class = "form-contal" })
+        @Html.ValidationMessageFor(s => s.EventName, "", new { @class = "text-danger" })
+        <br />
 
 
-    @Html.ValidationMessage("Region", "", new { @class = "text-danger" })
-    <br />
-    <br />
+        <p> @Html.Label("Region", "Region:")</p>
+        @Html.DropDownListFor(s => s.Region, new List<SelectListItem>
+       {
+    new SelectListItem {Text ="BOP",Value="1"},
+    new SelectListItem {Text ="Central 1",Value="2"},
+    new SelectListItem {Text ="Central 2",Value="3"},
+    new SelectListItem {Text ="Northern",Value="4"},
+    new SelectListItem {Text ="Southern 1",Value="5"},
+    new SelectListItem {Text ="Southern 2",Value="6"},
+    new SelectListItem {Text ="Wellington",Value="7"},
 
-    <p> @Html.Label("Description", "Description:")</p>
-    @Html.TextBox("Description", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("Description", "", new { @class = "text-danger" })
-    <br />
-
-
-    <p> @Html.Label("Date", "Date:")</p>
-    @Html.TextBox("Date", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("Date", "", new { @class = "text-danger" })
-    <br />
+       }, "Select the Region")
 
 
-    <p> @Html.Label("City", "City:")</p>
-    @Html.DropDownList("City", new List<SelectListItem>
-   {
-new SelectListItem {Text ="Auckland",Value="1"},
-new SelectListItem {Text ="Christchurch",Value="2"},
-new SelectListItem {Text ="Dunedin",Value="3"},
-new SelectListItem {Text ="Hamilton",Value="4"},
-new SelectListItem {Text ="Kapiti",Value="5"},
-new SelectListItem {Text ="Levin",Value="6"},
-new SelectListItem {Text ="Nelson",Value="7"},
-new SelectListItem {Text ="Napier",Value="8"},
-new SelectListItem {Text ="NewPlymouth",Value="9"},
-new SelectListItem {Text ="Palmerston North",Value="10"},
-new SelectListItem {Text ="Queenstown",Value="11"},
-new SelectListItem {Text ="Rotorua",Value="12"},
-new SelectListItem {Text ="Timaru",Value="13"},
-new SelectListItem {Text ="Taupo",Value="14"},
-new SelectListItem {Text ="Tauranga",Value="15"},
-new SelectListItem {Text ="UpperHutt",Value="16"},
-new SelectListItem {Text ="Wellington",Value="17"},
-new SelectListItem {Text ="Whakatane",Value="18"},
-new SelectListItem {Text ="Wanganui",Value="19"},
-new SelectListItem {Text ="Whangarei",Value="20"},
+        @Html.ValidationMessageFor(s => s.Region, "", new { @class = "text-danger" })
+        <br />
+        <br />
 
-   }, "Select the City")
-
-    @Html.ValidationMessage("City", "", new { @class = "text-danger" })
-    <br />
-    <br />
-    <p> @Html.Label("Type of Event", "Type of Event:")</p>
-    @Html.TextBox("Type of Event", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("Type of Event", "", new { @class = "text-danger" })
-    <br />
-
-    <p> @Html.Label("Number of officials needed", "Number of officials needed:")</p>
-    @Html.TextBox("Number of officials needed", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("Number of officials needed", "", new { @class = "text-danger" })
-    <br />
+        <p> @Html.Label("Description", "Description:")</p>
+        @Html.TextBoxFor(s => s.Description, null, new { @class = "form-contal" })
+        @Html.ValidationMessageFor(s => s.Description, "", new { @class = "text-danger" })
+        <br />
 
 
-    <center>
-        <p> <a href="~/Events/AdminEvents/"> <div class="button"><center>Submit</center>  </div> </a></p>
-    </center>
+        <p> @Html.Label("Date", "Date:")</p>
+        @Html.TextBoxFor(s => s.Date, null, new { @class = "form-contal" })
+        @Html.ValidationMessageFor(s => s.Date, "", new { @class = "text-danger" })
+        <br />
+
+
+        <p> @Html.Label("City", "City:")</p>
+        @Html.DropDownListFor(s => s.City, new List<SelectListItem>
+       {
+    new SelectListItem {Text ="Auckland",Value="1"},
+    new SelectListItem {Text ="Christchurch",Value="2"},
+    new SelectListItem {Text ="Dunedin",Value="3"},
+    new SelectListItem {Text ="Hamilton",Value="4"},
+    new SelectListItem {Text ="Kapiti",Value="5"},
+    new SelectListItem {Text ="Levin",Value="6"},
+    new SelectListItem {Text ="Nelson",Value="7"},
+    new SelectListItem {Text ="Napier",Value="8"},
+    new SelectListItem {Text ="NewPlymouth",Value="9"},
+    new SelectListItem {Text ="Palmerston North",Value="10"},
+    new SelectListItem {Text ="Queenstown",Value="11"},
+    new SelectListItem {Text ="Rotorua",Value="12"},
+    new SelectListItem {Text ="Timaru",Value="13"},
+    new SelectListItem {Text ="Taupo",Value="14"},
+    new SelectListItem {Text ="Tauranga",Value="15"},
+    new SelectListItem {Text ="UpperHutt",Value="16"},
+    new SelectListItem {Text ="Wellington",Value="17"},
+    new SelectListItem {Text ="Whakatane",Value="18"},
+    new SelectListItem {Text ="Wanganui",Value="19"},
+    new SelectListItem {Text ="Whangarei",Value="20"},
+
+       }, "Select the City")
+
+        @Html.ValidationMessageFor(s => s.City, "", new { @class = "text-danger" })
+        <br />
+        <br />
+        <p> @Html.Label("Type of Event", "Type of Event:")</p>
+        @Html.TextBoxFor(s => s.TypeofEvent, null, new { @class = "form-contal" })
+        @Html.ValidationMessageFor(s => s.TypeofEvent, "", new { @class = "text-danger" })
+        <br />
+
+        <p> @Html.Label("Number of officials needed", "Number of officials needed:")</p>
+        @Html.TextBoxFor(s => s.NumberOfOfficialsNeeded, null, new { @class = "form-contal" })
+        @Html.ValidationMessageFor(s => s.NumberOfOfficialsNeeded, "", new { @class = "text-danger" })
+        <br />
+
+        <center>
+
+        <p>  <input type="Submit" value="Add Event" class="button"><center>Submit</center> </p>
+        </center>
 
 
 
-    <br />
-    <style>
-        * {
-            box-sizing: border-box;
-        }
-
-        /* Add padding to containers */
-        .container {
-            padding: 16px;
-        }
-
-        /* Full-width input fields */
-        .form-contal, text-danger {
-            width: 30%;
-            padding: 15px;
-            margin: 5px 0 22px 0;
-            display: inline-block;
-            border: none;
-            background: #f1f1f1;
-        }
-
-        input[type=text]:focus, input[type=password]:focus {
-            background-color: #ddd;
-            outline: none;
-        }
-
-        /* Overwrite default styles of hr */
-        hr {
-            border: 1px solid #f1f1f1;
-            margin-bottom: 25px;
-        }
-
-        /* Set a style for the submit/register button */
-        .button {
-            background-color: black;
-            color: white;
-            padding: 16px 20px;
-            margin: 20px 0;
-            border: none;
-            cursor: pointer;
-            width: 20%;
-            opacity: 0.9;
-        }
-
-            .button:hover {
-                opacity: 1;
+        <br />
+        <style>
+            * {
+                box-sizing: border-box;
             }
 
-        /* Add a blue text color to links */
-        a {
-            color: white;
-        }
+            /* Add padding to containers */
+            .container {
+                padding: 16px;
+            }
 
-        /* Set a grey background color and center the text of the "sign in" section */
-        .signin {
-            background-color: #f1f1f1;
-            text-align: center;
-        }
-    </style>
+            /* Full-width input fields */
+            .form-contal, text-danger {
+                width: 30%;
+                padding: 15px;
+                margin: 5px 0 22px 0;
+                display: inline-block;
+                border: none;
+                background: #f1f1f1;
+            }
 
+            input[type=text]:focus, input[type=password]:focus {
+                background-color: #ddd;
+                outline: none;
+            }
+
+            /* Overwrite default styles of hr */
+            hr {
+                border: 1px solid #f1f1f1;
+                margin-bottom: 25px;
+            }
+
+            /* Set a style for the submit/register button */
+            .button {
+                background-color: black;
+                color: white;
+                padding: 16px 20px;
+                margin: 20px 0;
+                border: none;
+                cursor: pointer;
+                width: 20%;
+                opacity: 0.9;
+            }
+
+                .button:hover {
+                    opacity: 1;
+                }
+
+            /* Add a blue text color to links */
+            a {
+                color: white;
+            }
+
+            /* Set a grey background color and center the text of the "sign in" section */
+            .signin {
+                background-color: #f1f1f1;
+                text-align: center;
+            }
+        </style>
+    }
 </body>
 </html>
