--- a/RDEvent/Views/Profile/Availability.cshtml
+++ b/RDEvent/Views/Profile/Availability.cshtml
@@ -25,20 +25,20 @@
 
 
     <p> @Html.Label("Regions of availability", "Regions of availability:")</p>
-    @Html.TextBox("Regions of availability", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("Regions of availability", "", new { @class = "text-danger" })
+    @Html.TextBox("RegionsOfAvailability", null, new { @class = "form-contal" })
+    @Html.ValidationMessage("RegionsOfAvailability", "", new { @class = "text-danger" })
 
     &nbsp;
 
     <p> @Html.Label("Types of games", "Types of games:")</p>
-    @Html.TextBox("Types of games", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("Types of games", "", new { @class = "text-danger" })
+    @Html.TextBox("TypesOfGames", null, new { @class = "form-contal" })
+    @Html.ValidationMessage("TypesOfGames", "", new { @class = "text-danger" })
     <br />
 
 
     <p> @Html.Label("Priority of regions", "Priority of regions:")</p>
-    @Html.TextBox("Priority of regions", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("Priority of regions", "", new { @class = "text-danger" })
+    @Html.TextBox("PriorityOfRegions", null, new { @class = "form-contal" })
+    @Html.ValidationMessage("PriorityOfRegions", "", new { @class = "text-danger" })
     <br />
 
     <center>
