--- a/RDEvent/Views/Events/Index.cshtml
+++ b/RDEvent/Views/Events/Index.cshtml
@@ -4,22 +4,53 @@
 }
 
     
-    <center>
-        <h1 Style="background-color: black;color:pink;"> Events </h1>
-    </center>
-<html>
-    <body>
+    <DOCTYPE html>
+        <html>
+        <body>
+
+            <style>
+
+                table,
+                th,
+                td {
+                    padding: 10px;
+                    border: 2px solid Black;
+                    border-collapse: collapse;
+                }
+            </style>
+            <header>
+                <h1 Style="background-color: black;color:pink;"> Event Details </h1>
+            </header>
+            <table>
+                <tr>
+                    <th><h3 Style="background-color: white;color:darkgrey;">  Event ID</h3></th>
+                    <th><h3 Style="background-color: white;color:darkgrey;">  Event Name</h3></th>
+                    <th> <h3 Style="background-color: white;color:darkgrey;"> Region</h3></th>
+                    <th> <h3 Style="background-color: white;color:darkgrey;"> Description</h3></th>
+                    <th> <h3 Style="background-color: white;color:darkgrey;"> Date </h3></th>
+                    <th> <h3 Style="background-color: white;color:darkgrey;"> City</h3></th>
+                    <th> <h3 Style="background-color: white;color:darkgrey;"> Type of Event</h3></th>
+                    <th> <h3 Style="background-color: white;color:darkgrey;"> Number Of Officials Needed</h3></th>
 
 
-        <p>
-            Emralds Women vs Rubbies Women . Wellington . Region3
-        </p>
 
-       
-        <p>
-            Emralds Men vs Rubbies Men . Auckland . Region1
-        </p>
-        
 
-    </body>
+                </tr>
+                @foreach (var i in Model)
+                {
+                    <tr>
+                        <td> @i.EventID</td>
+                        <td> @i.EventName </td>
+                        <td> @i.Region</td>
+                        <td> @i.Description </td>
+                        <td> @i.Date </td>
+                        <td> @i.City</td>
+                        <td> @i.TypeofEvent </td>
+                        <td> @i.NumberOfOfficialsNeeded</td>
+                       
+                    </tr>
+                }
+            </table>
+
+        </body>
     </html>
