--- a/RDEvent/Views/Home/Index.cshtml
+++ b/RDEvent/Views/Home/Index.cshtml
@@ -20,10 +20,10 @@
                 <div class="col-lg-6">
 
                     <div class="column-sm-2 ">
-                        <a href="/Register/Index">
+                        <a href="/Register/Registration">
                             <img src="~/Content/Images/Register.jpg" style="width:30%">
                         </a>
-                        <a href="/Login/Index">
+                        <a href="/Login/Login">
                             <img src="~/Content/Images/Userlogin.jpg" style="width:30%">
                         </a>
                         <a href="/Login/Admin">
