--- a/RDEvent/Views/Login/NewPassword.cshtml
+++ b/RDEvent/Views/Login/NewPassword.cshtml
@@ -1,103 +1,122 @@
-﻿
+﻿@model RDEvent.Models.ResetPassword
 @{
-    ViewBag.Title = "NewPassword";
+    ViewBag.Title = "Reset Password";
 }
 
 
-<html>
+
 <center>
-    <h1 Style="background-color: black;color:pink;"> Change Password </h1>
+    <h1 Style="background-color: black;color:pink;"> Reset Password </h1>
 </center>
-<body>
 
 
-    <br />
-    <br />
-    <center>
-        <div class="container">
-           
-            <label for="psw"><b>New Password</b></label>&nbsp;
-            &nbsp;<input type="password" placeholder="Enter Password" name="psw" required>
-            <br />
-            <br />
-            <label for="psw"><b>Repeat Password</b></label>&nbsp;
-            &nbsp;<input type="password" placeholder="Repeat your Password" name="psw" required>
-            <br />
-            <br />
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    <div class="form-horizontal">
+        <div class="text-danger">
+            @ViewBag.Message
         </div>
-        
-        <br />
-    </center>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.NewPassword, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NewPassword, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.HiddenFor(a => a.ResetCode)
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Submit" class="button" />
+            </div>
+        </div>
+    </div>
+}
+<div>
+    @Html.ActionLink("Login", "Login")
+</div>
+@section Scripts{
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+}
 
-    <center>
-        <p> <a href="/Login/Index/"> <div class="button"><center>Submit</center>  </div> </a></p>
 
 
-      
 
-      
-    </p><br />
-    <style>
-        * {
-            box-sizing: border-box;
+
+
+
+<br />
+<style>
+    * {
+        box-sizing: border-box;
+    }
+
+    /* Add padding to containers */
+    .container {
+        padding: 16px;
+    }
+
+    /* Full-width input fields */
+    input[type=text], input[type=password] {
+        width: 30%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        display: inline-block;
+        border: none;
+        background: #f1f1f1;
+    }
+
+        input[type=text]:focus, input[type=password]:focus {
+            background-color: #ddd;
+            outline: none;
         }
 
-        /* Add padding to containers */
-        .container {
-            padding: 16px;
+    /* Overwrite default styles of hr */
+    hr {
+        border: 1px solid #f1f1f1;
+        margin-bottom: 25px;
+    }
+
+    /* Set a style for the submit/register button */
+    .button {
+        background-color: #000000;
+        color: white;
+        padding: 16px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 20%;
+        opacity: 0.9;
+    }
+
+        .button:hover {
+            opacity: 1;
         }
 
-        /* Full-width input fields */
-        input[type=text], input[type=password] {
-            width: 30%;
-            padding: 15px;
-            margin: 5px 0 22px 0;
-            display: inline-block;
-            border: none;
-            background: #f1f1f1;
-        }
+    /* Add a blue text color to links */
+    a {
+        color: dodgerblue;
+    }
 
-            input[type=text]:focus, input[type=password]:focus {
-                background-color: #ddd;
-                outline: none;
-            }
+    /* Set a grey background color and center the text of the "sign in" section */
+    .signin {
+        background-color: #f1f1f1;
+        text-align: center;
+    }
+</style>
 
-        /* Overwrite default styles of hr */
-        hr {
-            border: 1px solid #f1f1f1;
-            margin-bottom: 25px;
-        }
 
-        /* Set a style for the submit/register button */
-        .button {
-            background-color: #000000;
-            color: white;
-            padding: 16px 20px;
-            margin: 8px 0;
-            border: none;
-            cursor: pointer;
-            width: 20%;
-            opacity: 0.9;
-        }
-
-            .button:hover {
-                opacity: 1;
-            }
-
-        /* Add a blue text color to links */
-        a {
-            color: dodgerblue;
-        }
-
-        /* Set a grey background color and center the text of the "sign in" section */
-        .signin {
-            background-color: #f1f1f1;
-            text-align: center;
-        }
-    </style>
-
-</body>
-</html>
 
 
 
