--- a/RDEvent/Views/Shared/_Layout.cshtml
+++ b/RDEvent/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<h1>Roller Derby Association NewZealand Incorporated</h1>
+<center><h1>Roller Derby Association NewZealand Incorporated</h1></center>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -93,6 +93,6 @@
     </footer>
     <script src="~/Scripts/jquery-3.4.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-
+    @RenderSection("Scripts",false)
 </body>
 </html>
