--- a/RDEvent/Views/Login/ForgotPassword.cshtml
+++ b/RDEvent/Views/Login/ForgotPassword.cshtml
@@ -1,33 +1,34 @@
-﻿
+﻿@model RDEvent.Models.User
 @{
-    ViewBag.Title = "ForgotPassword";
+    ViewBag.Title = "Forgot Password";
 }
 
-<html>
 <center>
     <h1 Style="background-color: black;color:pink;"> Forgot Password </h1>
 </center>
 <body>
 
+    @using (Html.BeginForm())
+    {
+        <div class="form-horizontal">
+            <hr />
+            <div class="text-success">
+                @ViewBag.Message
+            </div>
+            <div class="form-group">
+                <label class="control-label col-md-2">Email ID</label>
+                @Html.TextBox("EmailID", "", new { @class = "form-control" })
+            </div>
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Submit" class="button" />
+                </div>
+            </div>
+        </div>
+    }
 
-    <br />
-    <br />
 
-    <center>
-        <div class="container">
-            <label for="uname"><b>Email</b></label>&nbsp;
-            <input type="text" placeholder="Enter Email" name="FEmail" required>
-            <br />
-            <br />
-            
-    </div>
 
-    <center>
-        <p> <a href="/Login/ForgotCode/"> <div class="loginbtn"><center></center>Sent Code  </div> </a></p>
-    </center>
-   
-    <br />
-    
     <style>
         * {
             box-sizing: border-box
@@ -60,7 +61,7 @@
         }
 
         /* Set a style for the submit/register button */
-        .loginbtn {
+        .button {
             background-color: #000000;
             color: white;
             padding: 16px 20px;
@@ -71,9 +72,9 @@
             opacity: 0.9;
         }
 
-            .loginbtn:hover {
-                opacity: 1;
-            }
+        .loginbtn:hover {
+            opacity: 1;
+        }
 
         /* Add a blue text color to links */
         a {
@@ -87,4 +88,4 @@
         }
     </style>
 </body>
-</html>
+
