--- a/RDEvent/Views/Profile/Availability.cshtml
+++ b/RDEvent/Views/Profile/Availability.cshtml
@@ -1,53 +1,52 @@
-﻿@{
+﻿@model RDEvent.Models.Register
+@{
     ViewBag.Title = "Availability";
 }
-<script src="~/Models/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+
 <html>
 <body>
     <center>
         <h1 Style="background-color: black;color:pink;"> Enter your Availability </h1>
     </center>
     <br />
-    @Html.AntiForgeryToken()
+    @using (Html.BeginForm("Availability", "Profile", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
 
-    <p> @Html.Label("From", "From:")</p>
-    @Html.TextBox("From", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("From", "", new { @class = "text-danger" })
+        <p> @Html.Label("From", "From:")</p>
+        @Html.TextBoxFor(db => db.From, null, new { @type = "date" })
+        @Html.ValidationMessageFor(db => db.From, "", new { @class = "text-danger" })
 
-    &nbsp;
+        <br />
 
-    <p> @Html.Label("To", "To:")</p>
-    @Html.TextBox("To", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("To", "", new { @class = "text-danger" })
-    <br />
-
-
-    <p> @Html.Label("Regions of availability", "Regions of availability:")</p>
-    @Html.TextBox("RegionsOfAvailability", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("RegionsOfAvailability", "", new { @class = "text-danger" })
-
-    &nbsp;
-
-    <p> @Html.Label("Types of games", "Types of games:")</p>
-    @Html.TextBox("TypesOfGames", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("TypesOfGames", "", new { @class = "text-danger" })
-    <br />
+        <p> @Html.Label("To", "To:")</p>
+        @Html.TextBoxFor(db => db.To, null, new { @type = "date" })
+        @Html.ValidationMessageFor(db => db.To, "", new { @class = "text-danger" })
+        <br />
 
 
-    <p> @Html.Label("Priority of regions", "Priority of regions:")</p>
-    @Html.TextBox("PriorityOfRegions", null, new { @class = "form-contal" })
-    @Html.ValidationMessage("PriorityOfRegions", "", new { @class = "text-danger" })
-    <br />
+        <p> @Html.Label("Regions of availability", "Regions of availability:")</p>
+        @Html.TextBoxFor(db => db.RegionsOfAvailability, null, new { @class = "form-contal" })
+        @Html.ValidationMessageFor(db => db.RegionsOfAvailability, "", new { @class = "text-danger" })
 
-    <center>
-        <p><a href="~/Home/Users"> <div class="button"><center>Submit</center>  </div> </a></p>
-    </center>
+        <br />
+
+        <p> @Html.Label("Types of games", "Types of games:")</p>
+        @Html.TextBoxFor(db => db.TypesOfGames, null, new { @class = "form-contal" })
+        @Html.ValidationMessage("TypesOfGames", "", new { @class = "text-danger" })
+        <br />
 
 
+        <p> @Html.Label("Priority of regions", "Priority of regions:")</p>
+        @Html.TextBoxFor(db => db.PriorityOfRegions, null, new { @class = "form-contal" })
+        @Html.ValidationMessageFor(db => db.PriorityOfRegions, "", new { @class = "text-danger" })
+        <br />
 
-    <br />
+        <center><input type="Submit" value="Update" class="btn btn-default" /></center>
+
+    }
+
     <style>
         * {
             box-sizing: border-box;
@@ -59,7 +58,7 @@
         }
 
         /* Full-width input fields */
-        .form-contal, text-danger {
+        input[type=text], input[type=password] {
             width: 30%;
             padding: 15px;
             margin: 5px 0 22px 0;
@@ -68,10 +67,10 @@
             background: #f1f1f1;
         }
 
-        input[type=text]:focus, input[type=password]:focus {
-            background-color: #ddd;
-            outline: none;
-        }
+            input[type=text]:focus, input[type=password]:focus {
+                background-color: #ddd;
+                outline: none;
+            }
 
         /* Overwrite default styles of hr */
         hr {
@@ -82,9 +81,9 @@
         /* Set a style for the submit/register button */
         .button {
             background-color: #000000;
-            color: black;
+            color: white;
             padding: 16px 20px;
-            margin: 20px 0;
+            margin: 8px 0;
             border: none;
             cursor: pointer;
             width: 20%;
@@ -97,7 +96,7 @@
 
         /* Add a blue text color to links */
         a {
-            color: white;
+            color: dodgerblue;
         }
 
         /* Set a grey background color and center the text of the "sign in" section */
@@ -106,6 +105,6 @@
             text-align: center;
         }
     </style>
-
+    }
 </body>
 </html>
